<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_discover"
            style="@style/activebottom"

            android:drawableTop="@drawable/discover_icon"
            android:text="@string/discover"
            />
        <TextView
            android:id="@+id/tv_map"
            style="@style/activebottom"
            android:drawableTop="@drawable/map"
            android:text="@string/map"

            />
        <TextView
            android:id="@+id/tv_posts"
            style="@style/activebottom"
            android:text="@string/posts"
            android:drawableTop="@drawable/my_post"/>
        <TextView
            android:id="@+id/tv_requests"
            style="@style/activebottom"
            android:text="@string/request"
            android:drawableTop="@drawable/request"/>
        <TextView
            android:id="@+id/tv_network"
            style="@style/activebottom"
            android:text="@string/network"
            android:drawableTop="@drawable/my_network"/>


    </LinearLayout>
