<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_request">
    <RelativeLayout
        android:id="@+id/llVpFragment"
        style="@style/fillparent"
        android:layout_margin="25dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/bg_request"
            >
            <Button
                android:id="@+id/btn_post"
                style="@style/fragmentButtonLayout"
                android:text="@string/my_posts"
                android:layout_marginEnd="0.2dp"
                android:background="@drawable/left_round_btn"
                />
            <Button
                android:id="@+id/btn_maps"
                style="@style/fragmentButtonLayout"
                android:text="@string/map"
                android:background="@drawable/center_button_rectangle"
                />

            <Button
                android:id="@+id/btn_network"
                style="@style/fragmentButtonLayout"
                android:text="@string/mynetwork"
                android:background="@drawable/right_button_requests"
                />


        </LinearLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/vp_request"
            android:layout_marginTop="15dp"

            android:layout_below="@id/ll_button"
            style="@style/fillparent"
            >



        </android.support.v4.view.ViewPager>


    </RelativeLayout>


</LinearLayout>